gccida/c3/insert_expr_in_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_expr_in_table/src/gcse.c:2416:36: error: must use 'enum' tag to refer to type 'machine_mode'
void  insert_expr_in_table( rtx x, machine_mode mode, rtx insn, int antic_p, int avail_p) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_expr_in_table/src/gcse.c:2486:12: error: expected expression
*( _OWORD *)&v10->next_same_hash = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_expr_in_table/src/gcse.c:2486:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v10->next_same_hash = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/insert_expr_in_table/src/obj/gcse.o] Error 1
